--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "sql",
   "version": "1.0.0",
   "description": "learning sql i guess",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "watch": "tsc -w"
   },
   "author": "Quinn T",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^14.14.35",
+    "mariadb": "^2.5.3",
+    "prompt-sync": "^4.2.0",
     "typescript": "^4.2.3"
+  },
+  "devDependencies": {
+    "@types/prompt-sync": "^4.1.0"
   }
 }
