--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@ env.ts
 
 # I've decided not to include build JS into version controll.
 # You can run `npm run build` or `npm run watch` to get the JS anyways
-lib/**/*
+lib/**
 
